--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ layout: default
 				<div class="column is-two-thirds is-centered has-nice-link" itemscope itemtype="http://schema.org/Person">
 					<img id="profile-pic" src="daniel_schorin_small.jpg" width="160" height="160" itemprop="image">
 					<h1 class="title is-2" itemprop="name">Daniel Schorin</h1>
-					<h2 class="subtitle is-4" itemprop="description">Student &amp; Expert In Training</h2>
-					<p>Currently experimenting with front-end development, analytics-based application development, and meditation<br class="is-hidden-small-screen"> </p>
+					<h2 class="subtitle is-4" itemprop="description">Student at the University of Michigan</h2>
+					<p>Currently experimenting with front-end development, application development, and meditation<br class="is-hidden-small-screen"> </p>
 					<br>
 					<p class="has-text-centered">
-						<a class="button is-large is-white" href="https://blog.danielschorin.com">
+						<a class="button is-large is-white" href="https://medium.com/@danielschorin">
 							<span class="icon">
 								<i class="fa fa-book"></i>
 							</span>
@@ -71,13 +71,13 @@ layout: default
 		</div>
 	</div>
 </section>
-<!--
+
 <section class="hero is-fullheight is-gray">
 	<div id="projects" class="hero-body container">
 		<div class="columns is-vcentered">
 			<div class="column has-text-centered has-nice-link">
 				<img id="unicorn-icon" src="unicorn.svg" width="100" height="100">
-				<h4 class="title is-4" style="font-weight: 400">My main focus right now is <a href="https://ava.li"><strong>AVA</strong></a>, macOS development, and maintaining all my <nobr>open-source</nobr> projects.</h4>
+				<h4 class="title is-4" style="font-weight: 400"></h4>
 			</div>
 			<div id="latest-repos-container" class="column is-half is-offset-1 has-nice-link">
 				<h2 class="title is-2">Latest repos</h2>
@@ -95,7 +95,6 @@ layout: default
 		</div>
 	</div>
 </section>
--->
 <section class="section hero is-fullheight is-default is-bold">
 	<div id="apps" class="container">
 		<h2 class="title is-2">Apps</h2>
@@ -133,4 +132,5 @@ layout: default
 		</div>
 	</div>
 </section>
+
 
