--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 <style>
 	#latest-repos-container h2 {
@@ -16,10 +17,10 @@ layout: default
 		<div id="info-container" class="container has-text-centered">
 			<div class="columns is-vcentered">
 				<div class="column is-two-thirds is-centered has-nice-link" itemscope itemtype="http://schema.org/Person">
-					<img id="profile-pic" src="daniel_schorin_small.jpg" width="160" height="160" itemprop="image">
+					<img id="profile-pic" src="daniel_schorin_small.PNG" width="160" height="160" itemprop="image">
 					<h1 class="title is-2" itemprop="name">Daniel Schorin</h1>
-					<h2 class="subtitle is-4" itemprop="description">Student at the University of Michigan</h2>
-					<p>Currently experimenting with front-end development, application development, and meditation<br class="is-hidden-small-screen"> </p>
+					<h2 class="subtitle is-4" itemprop="description">Information Analytics and Business student at the University of Michigan</h2>
+					<p>Currently experimenting with front-end development and application development<br class="is-hidden-small-screen"> </p>
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-white" href="https://medium.com/@danielschorin">
