--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 <style>
 	#latest-repos-container h2 {
@@ -77,7 +76,7 @@ layout: default
 	<div id="projects" class="hero-body container">
 		<div class="columns is-vcentered">
 			<div class="column has-text-centered has-nice-link">
-				<img id="unicorn-icon" src="unicorn.svg" width="100" height="100">
+				<img id="astronaut-icon" src="astronaut.svg" width="100" height="100">
 				<h4 class="title is-4" style="font-weight: 400"></h4>
 			</div>
 			<div id="latest-repos-container" class="column is-half is-offset-1 has-nice-link">
