--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<script src="https://use.fontawesome.com/473ea12f98.js"></script>
 <style>
 	#latest-repos-container h2 {
 		margin-bottom: 2rem;
@@ -12,6 +12,7 @@ layout: default
 </style>
 
 <section class="hero is-fullheight is-default">
+	<script src="https://use.fontawesome.com/473ea12f98.js"></script>
 	<div class="hero-body">
 		<div id="info-container" class="container has-text-centered">
 			<div class="columns is-vcentered">
