--- a/index.html
+++ b/index.html
@@ -25,25 +25,26 @@ layout: default
 					<p class="has-text-centered">
 						<a class="button is-large is-white" href="https://medium.com/@danielschorin">
 							<span class="icon">
-								<i class="fa fa-book"></i>
+								<i class="fa fa-book" aria-hidden="true"></i>
 							</span>
 							<span>Writings</span>
 						</a>
 						<a class="button is-large is-white" href="https://github.com/djschor">
 							<span class="icon">
-								<i class="fa fa-github"></i>
+								<i class="fa fa-github" aria-hidden="true"></i>
 							</span>
 							<span>Code</span>
 						</a>
 						<a class="button is-large is-white" href="https://twitter.com/danielschorin">
 							<span class="icon">
-								<i class="fa fa-twitter"></i>
+								<i class="fa fa-twitter" aria-hidden="true"></i>
 							</span>
 							<span>Tweets</span>
 						</a>
 						<a class="button is-large is-white" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/">
 							<span class="icon">
-								<i class="fa fa-linkedin-square"></i>
+								<i class="fa fa-linkedin-square" aria-hidden="true"></i>
+
 							</span>
 							<span>LinkedIn</span>
 						</a>
