--- a/index.html
+++ b/index.html
@@ -24,28 +24,19 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-white" href="https://medium.com/@danielschorin">
-							<span class="icon">
-								<i class="fa fa-book" aria-hidden="true"></i>
-							</span>
+							<span class="icon-brand"></span>
 							<span>Writings</span>
 						</a>
 						<a class="button is-large is-white" href="https://github.com/djschor">
-							<span class="icon">
-								<i class="fa fa-github" aria-hidden="true"></i>
-							</span>
+							<span class="icon-brand2"></span>
 							<span>Code</span>
 						</a>
 						<a class="button is-large is-white" href="https://twitter.com/danielschorin">
-							<span class="icon">
-								<i class="fa fa-twitter" aria-hidden="true"></i>
-							</span>
+							<span class="icon-brand3"></span>
 							<span>Tweets</span>
 						</a>
 						<a class="button is-large is-white" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/">
-							<span class="icon">
-								<i class="fa fa-linkedin-square" aria-hidden="true"></i>
-
-							</span>
+							<span class="icon-brand4"></span>
 							<span>LinkedIn</span>
 						</a>
 					</p>
