--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-white" href="https://medium.com/@danielschorin">
-							<span class="icon-brand"></span>
+							<svg class="icon icon-brand"><use xlink:href="#icon-brand"></use></svg>
 							<span>Writings</span>
+							
+</svg>
 						</a>
 						<a class="button is-large is-white" href="https://github.com/djschor">
 							<span class="icon-brand2"></span>
@@ -35,7 +37,7 @@ layout: default
 							<span class="icon-brand3"></span>
 							<span>Tweets</span>
 						</a>
-						<a class="button is-large is-white" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/">
+						<a class="button is-large is-white" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/">it 
 							<span class="icon-brand4"></span>
 							<span>LinkedIn</span>
 						</a>
