--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@ layout: default
 							<span>Writings</span>
 						</a>
 						<a class="button is-large is-white" href="https://github.com/djschor">
-							<span class="icon-brand2"></span>
+							<svg class="icon icon-brand2"><use xlink:href="#icon-brand2"></use></svg>							
 							<span>Code</span>
 						</a>
 						<a class="button is-large is-white" href="https://twitter.com/danielschorin">
-							<span class="icon-brand3"></span>
+							<svg class="icon icon-brand3"><use xlink:href="#icon-brand3"></use></svg>
 							<span>Tweets</span>
 						</a>
-						<a class="button is-large is-white" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/">it 
-							<span class="icon-brand4"></span>
+						<a class="button is-large is-white" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
+							<svg class="icon icon-brand4"><use xlink:href="#icon-brand4"></use></svg>
 							<span>LinkedIn</span>
 						</a>
 					</p>
