--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@ layout: default
 					<p>Currently experimenting with front-end development and application development<br class="is-hidden-small-screen"> </p>
 					<br>
 					<p class="has-text-centered">
-						<a class="button is-large is-dark" href="https://medium.com/@danielschorin">
+						<a class="button is-medium is-light" href="https://medium.com/@danielschorin">
 							<svg class="icon icon-brand"><use xlink:href="#icon-brand"></use></svg>
 							<span>Writings</span>
 						</a>
-						<a class="button is-large is-dark" href="https://github.com/djschor">
+						<a class="button is-medium is-light" href="https://github.com/djschor">
 							<svg class="icon icon-brand2"><use xlink:href="#icon-brand2"></use></svg>							
 							<span>Code</span>
 						</a>
-						<a class="button is-large is-dark" href="https://twitter.com/danielschorin">
+						<a class="button is-medium is-light" href="https://twitter.com/danielschorin">
 							<svg class="icon icon-brand3"><use xlink:href="#icon-brand3"></use></svg>
 							<span>Tweets</span>
 						</a>
-						<a class="button is-large is-dark" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
+						<a class="button is-medium is-light" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
 							<svg class="icon icon-brand4"><use xlink:href="#icon-brand4"></use></svg>
 							<span>LinkedIn</span>
 						</a>
