--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-<script src="https://use.fontawesome.com/473ea12f98.js"></script>
 <style>
 	#latest-repos-container h2 {
 		margin-bottom: 2rem;
@@ -11,8 +10,7 @@ layout: default
 	}
 </style>
 
-<section class="hero is-fullheight is-default">
-	<script src="https://use.fontawesome.com/473ea12f98.js"></script>
+<section class="hero is-fullheight is-default is-primary">
 	<div class="hero-body">
 		<div id="info-container" class="container has-text-centered">
 			<div class="columns is-vcentered">
@@ -73,7 +71,7 @@ layout: default
 				<h4 class="title is-4" style="font-weight: 400"></h4>
 			</div>
 			<div id="latest-repos-container" class="column is-half is-offset-1 has-nice-link">
-				<h2 class="title is-2">Latest repos</h2>
+				<h2 class="title is-2">Latest Code</h2>
 				<template id="latest-repos-template">
 					<div class="column is-half">
 						<h4 class="title is-4">
@@ -125,5 +123,43 @@ layout: default
 		</div>
 	</div>
 </section>
+<section id="contact">
+   <div class="row section-intro">
+     <div class="col-twelve">
+       <h5>Contact</h5>
+       <h1>I'd Love To Hear From You.</h1>
+     </div>
+   </div>
+   	<div class="row contact-info">
+   		<div class="col-four tab-full">
+   			<div class="icon">
+   				<i class="icon-pin"></i>
+   			</div>
+   			<h5>Where to find me</h5>
+   			<p>
+            Ann Arbor, Michigan
+            </p>
+
+   		</div>
+
+   		<div class="col-four tab-full collapse">
+
+   			<div class="icon">
+   				<i class="icon-mail"></i>
+   			</div>
+   			<h5>Email Me</h5>
+   			<p>djschorn@umich.edu<br>
+			   </p>
+   		</div>
+   		<div class="col-four tab-full">
+   			<div class="icon">
+   				<i class="icon-phone"></i>
+   			</div>
+   			<h5>Call Me At</h5>
+   			<p>Phone: (734) 355 3625<br>
+			   </p>
+   		</div>
+   	</div> <!-- /contact-info -->
+	</section>
 
 
