--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 	}
 </style>
 
-<section class="hero is-fullheight is-default is-primary">
+<section class="hero is-fullheight is-default is-danger">
 	<div class="hero-body">
 		<div id="info-container" class="container has-text-centered">
 			<div class="columns is-vcentered">
