--- a/index.html
+++ b/index.html
@@ -22,19 +22,28 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-medium is-primary is-outlined" href="https://medium.com/@danielschorin">
-							<svg class="icon icon-brand"><use xlink:href="#icon-brand"></use></svg>
+							<span class="icon">
+								<i class="fa fa-pencil"></i>
+							</span>
 							<span>Writings</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://github.com/djschor">
 							<svg class="icon icon-brand2"><use xlink:href="#icon-brand2"></use></svg>							
-							<span>Code</span>
+							<span>Github</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://twitter.com/danielschorin">
-							<svg class="icon icon-brand3"><use xlink:href="#icon-brand3"></use></svg>
+							<span class="icon">
+								<i class="fa fa-twitter"></i>
+							</span>
+
 							<span>Tweets</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
-							<svg class="icon icon-brand4"><use xlink:href="#icon-brand4"></use></svg>
+							 <span class="icon">
+								<i class="fa fa-linkedin-square"></i>
+							</span>
+
+
 							<span>LinkedIn</span>
 						</a>
 					</p>
@@ -42,7 +51,7 @@ layout: default
 					<div id="latest-blog-post">
 						<h4 class="title is-4">
 							<a class="is-gray-link" href=""></a>
-							<span class="tag is-small">Latest writing</span>
+							<span class="tag is-small">Medium</span>
 						</h4>
 						<p></p>
 					</div>
@@ -123,43 +132,6 @@ layout: default
 		</div>
 	</div>
 </section>
-<section id="contact">
-   <div class="row section-intro">
-     <div class="col-twelve">
-       <h5>Contact</h5>
-       <h1>I'd Love To Hear From You.</h1>
-     </div>
-   </div>
-   	<div class="row contact-info">
-   		<div class="col-four tab-full">
-   			<div class="icon">
-   				<i class="icon-pin"></i>
-   			</div>
-   			<h5>Where to find me</h5>
-   			<p>
-            Ann Arbor, Michigan
-            </p>
 
-   		</div>
-
-   		<div class="col-four tab-full collapse">
-
-   			<div class="icon">
-   				<i class="icon-mail"></i>
-   			</div>
-   			<h5>Email Me</h5>
-   			<p>djschorn@umich.edu<br>
-			   </p>
-   		</div>
-   		<div class="col-four tab-full">
-   			<div class="icon">
-   				<i class="icon-phone"></i>
-   			</div>
-   			<h5>Call Me At</h5>
-   			<p>Phone: (734) 355 3625<br>
-			   </p>
-   		</div>
-   	</div> <!-- /contact-info -->
-	</section>
 
 
