--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 	}
 </style>
 
-<section class="hero is-fullheight is-default is-danger">
+<section class="hero is-fullheight is-default">
 	<div class="hero-body">
 		<div id="info-container" class="container has-text-centered">
 			<div class="columns is-vcentered">
@@ -22,28 +22,22 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-medium is-primary is-outlined" href="https://medium.com/@danielschorin">
-							<span class="icon">
-								<i class="fa fa-pencil"></i>
-							</span>
+							<i class="fa fa-medium"></i>
 							<span>Writings</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://github.com/djschor">
-							<svg class="icon icon-brand2"><use xlink:href="#icon-brand2"></use></svg>							
+							<i class="fa fa-github"></i>
 							<span>Github</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://twitter.com/danielschorin">
-							<span class="icon">
-								<i class="fa fa-twitter"></i>
+							<i class="fa fa-twitter"></i>
 							</span>
 
 							<span>Tweets</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
-							 <span class="icon">
-								<i class="fa fa-linkedin-square"></i>
+							<i class="fa fa-linkedin-square"></i>
 							</span>
-
-
 							<span>LinkedIn</span>
 						</a>
 					</p>
