--- a/index.html
+++ b/index.html
@@ -22,20 +22,25 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-medium is-primary is-outlined" href="https://medium.com/@danielschorin">
-							<i class="fa fa-medium"></i>
+							<span class="icon">
+								<i class="fa fa-medium"></i>
+							</span>
 							<span>Writings</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://github.com/djschor">
-							<i class="fa fa-github"></i>
+							<span class="icon">
+								<i class="fa fa-github"></i>
+							</span>
 							<span>Github</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://twitter.com/danielschorin">
-							<i class="fa fa-twitter"></i>
+							<span class="icon">
+								<i class="fa fa-twitter"></i>
 							</span>
-
 							<span>Tweets</span>
 						</a>
 						<a class="button is-medium is-primary is-outlined" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
+							<span class="icon"
 							<i class="fa fa-linkedin-square"></i>
 							</span>
 							<span>LinkedIn</span>
