--- a/index.html
+++ b/index.html
@@ -75,21 +75,12 @@ layout: default
 	<div id="projects" class="hero-body container">
 		<div class="columns is-vcentered">
 			<div class="column has-text-centered has-nice-link">
-				<img id="astronaut-icon" src="astronaut.svg" width="100" height="100">
+				<img id="astronaut-icon" src="litty.png" width="100" height="100">
 				<h4 class="title is-4" style="font-weight: 400"></h4>
 			</div>
 			<div id="latest-repos-container" class="column is-half is-offset-1 has-nice-link">
-				<h2 class="title is-2">About Me</h2>
-				<template id="latest-repos-template">
-					<div class="column is-half">
-						<h4 class="title is-4">
-							<a class="latest-repos-title" href=""></a>
-							<span class="tag is-small latest-repos-language">¯\_(ツ)_/¯</span>
-						</h4>
-						<p class="latest-repos-description"></p>
-					</div>
-				</template>
-				<div id="latest-repos" class="columns is-multiline"></div>
+				<h2 class="title is-2">About</h2>
+				<h3 class="paragraph"> Welcome! I'm Daniel Schorin, a Information Analytics and Business student at the University of Michigan. My interests lie on intersection of business strategy, information technology, and product development.</h3>		
 			</div>
 		</div>
 	</div>
