making icon space

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@ layout: default
 					<p>Currently experimenting with front-end development and application development<br class="is-hidden-small-screen"> </p>
 					<br>
 					<p class="has-text-centered">
-						<a class="button is-medium is-primary is-outlined" href="https://medium.com/@danielschorin">
+						<a class="button is-large is-primary is-outlined" href="https://medium.com/@danielschorin">
 							<span class="icon">
 								<i class="fa fa-medium"></i>
 							</span>
 							<span>Writings</span>
 						</a>
-						<a class="button is-medium is-primary is-outlined" href="https://github.com/djschor">
+						<a class="button is-large is-primary is-outlined" href="https://github.com/djschor">
 							<span class="icon">
 								<i class="fa fa-github"></i>
 							</span>
 							<span>Github</span>
 						</a>
-						<a class="button is-medium is-primary is-outlined" href="https://twitter.com/danielschorin">
+						<a class="button is-large is-primary is-outlined" href="https://twitter.com/danielschorin">
 							<span class="icon">
 								<i class="fa fa-twitter"></i>
 							</span>
 							<span>Tweets</span>
 						</a>
-						<a class="button is-medium is-primary is-outlined" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
+						<a class="button is-large is-primary is-outlined" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
 							<span class="icon"
 							<i class="fa fa-linkedin-square"></i>
 							</span>
