--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@ layout: default
 <section class="hero is-fullheight is-bold">
 	<div id="projects" class="hero-body container">
 		<div class="columns is-vcentered">
-			<div class="column is-two-thirds is-centered has-nice-link" itemscope itemtype="http://schema.org/Person">
+			<div class="column has-text-centered has-nice-link">
 				<img id="profile-pic" src="litty.PNG" width="160" height="160" itemprop="image">
 				<h4 class="title is-4" style="font-weight: 400"></h4>
 			</div>
+			<div class = "container" class="column is-half is-offset-1 has-nice-link">
 				<h2 class="title is-2">About</h2>
 				<p3 class="paragraph"> Welcome! I'm Daniel Schorin, a Information Analytics and Business student at the University of Michigan. My interests lie on intersection of business strategy, information technology, and product development.</p3>		
 			</div>
