--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@ layout: default
 			</div>
 			<div class = "container" class="column is-half is-offset-1 has-nice-link">
 				<h2 class="title is-2">About</h2>
-				<img id="profile-pic" src="litty.PNG" width="160" height="160" itemprop="image">
-				<p3 class="paragraph"> Welcome! I'm Daniel Schorin, a Information Analytics and Business student at the University of Michigan. My interests lie on intersection of business strategy, information technology, and product development.</p3>		
-			</div>
+				<div class="column is-two-thirds is-centered has-nice-link" itemscope itemtype="http://schema.org/Person">
+
+					<img id="profile-pic" src="litty.PNG" width="160" height="160" itemprop="image">
+					<p3 class="paragraph"> Welcome! I'm Daniel Schorin, a Information Analytics and Business student at the University of Michigan. My interests lie on intersection of business strategy, information technology, and product development.</p>		
+				</div>
 		</div>
 	</div>
 </section>
