--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ layout: default
 							<span class="icon">
 								<i id="icon" class="fa fa-github"></i>
 							</span>
+							<i id="icon" class="fa fa-github" aria-hidden="true"></i>
+
 							<span>Github</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://twitter.com/danielschorin">
