--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-primary is-outlined" href="https://medium.com/@danielschorin">
+							<img id="medium" src="medium.svg" width="16" height="16">
+							<!--
 							<span class="icon">
 								<i id="icon" class="fa fa-medium"></i>
 							</span>
+							!-->
+							
 							<span>Writings</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://github.com/djschor">
