--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ layout: default
 						<a class="button is-large is-primary is-outlined" href="https://twitter.com/danielschorin">
 							<span class="icon">
 								<i id="icon" class="fa fa-twitter"></i>
+								<i class ="fa fa-camera-retro fa-lg"></i> 
 							</span>
 							<span>Tweets</span>
 						</a>
