--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ layout: default
 							<span>Github</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://twitter.com/danielschorin">
+							<i class ="fa fa-camera-retro fa-lg"></i> 
+
 							<span class="icon">
 								<i id="icon" class="fa fa-twitter"></i>
 								<i class ="fa fa-camera-retro fa-lg"></i> 
