--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 							<span>Writings</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://github.com/djschor">
-							<span class="icon">
+							<span class="fa fa-home fa-2x"></span>
 								<i id="icon" class="fa fa-github"></i>
 							</span>
 							<i id="icon" class="fa fa-github" aria-hidden="true"></i>
