--- a/index.html
+++ b/index.html
@@ -22,35 +22,29 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-primary is-outlined" href="https://medium.com/@danielschorin">
-							<img id="medium" src="medium.svg" width="16" height="16">
-							<!--
 							<span class="icon">
-								<i id="icon" class="fa fa-medium"></i>
+								<i class="fab fa-medium-m"></i>
 							</span>
-							!-->
 							
 							<span>Writings</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://github.com/djschor">
-							<span class="fa fa-home fa-2x"></span>
-								<i id="icon" class="fa fa-github"></i>
+							<span class="icon">
+								<i class="fab fa-github"></i>
 							</span>
-							<i id="icon" class="fa fa-github" aria-hidden="true"></i>
-
 							<span>Github</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://twitter.com/danielschorin">
 							<i class ="fa fa-camera-retro fa-lg"></i> 
 
 							<span class="icon">
-								<i id="icon" class="fa fa-twitter"></i>
-								<i class ="fa fa-camera-retro fa-lg"></i> 
+								<i class="fab fa-twitter"></i>
 							</span>
 							<span>Tweets</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
 							<span class="icon"
-								<i id="icon" class="fa fa-linkedin-square"></i>
+								<i class="fab fa-linkedin-in"></i>
 							</span>
 							<span>LinkedIn</span>
 						</a>
