--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ layout: default
 				<div class="column is-two-thirds is-centered has-nice-link" itemscope itemtype="http://schema.org/Person">
 
 					<img id="profile-pic" src="litty.PNG" width="160" height="160" itemprop="image">
-					<p3 class="paragraph"> Welcome! I'm Daniel Schorin, a Information Analytics and Business student at the University of Michigan. My interests lie on intersection of business strategy, information technology, and product development.</p>		
+					<p3 class="paragraph"> Welcome! I'm Daniel Schorin, a Information Analytics and Business student at the University of Michigan. My interests lie on intersection of business strategy, analytics, design, and product development.</p>		
 				</div>
 		</div>
 	</div>
