ICONS WORKING IT'S A MIRACLE

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ layout: default
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-primary is-outlined" href="https://medium.com/@danielschorin">
-							<i class="fab fa-medium-m"></i>
+							<span class="icon">
+								<i class="fab fa-medium-m"></i>
+							</span>
 							<span>Writings</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://github.com/djschor">
@@ -38,7 +40,7 @@ layout: default
 							<span>Tweets</span>
 						</a>
 						<a class="button is-large is-primary is-outlined" href="https://www.linkedin.com/in/daniel-schorin-85a626b1/"> 
-							<span class="icon"
+							<span class="icon">
 								<i class="fab fa-linkedin-in"></i>
 							</span>
 							<span>LinkedIn</span>
