--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 					<img id="profile-pic" src="daniel_schorin_small.PNG" width="160" height="160" itemprop="image">
 					<h1 class="title is-2" itemprop="name">Daniel Schorin</h1>
 					<h2 class="subtitle is-4" itemprop="description">Information Analytics and Business student at the University of Michigan</h2>
-					<p>Currently experimenting with front-end development and application development<br class="is-hidden-small-screen"> </p>
+					<p>Currently interning in St.Louis at Millipore Sigma apprenticing the art of Data Science<br class="is-hidden-small-screen"> </p>
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-primary is-outlined" href="https://medium.com/@danielschorin">
