app support and staging

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 					<img id="profile-pic" src="daniel_schorin_small.PNG" width="160" height="160" itemprop="image">
 					<h1 class="title is-2" itemprop="name">Daniel Schorin</h1>
 					<h2 class="subtitle is-4" itemprop="description">Information Analytics and Business student at the University of Michigan</h2>
-					<p>Currently interning in St.Louis at Millipore Sigma apprenticing the art of Data Science<br class="is-hidden-small-screen"> </p>
+					<p>Learning<br class="is-hidden-small-screen"> </p>
 					<br>
 					<p class="has-text-centered">
 						<a class="button is-large is-primary is-outlined" href="https://medium.com/@danielschorin">
@@ -72,7 +72,7 @@ layout: default
 </section>
 
 <section class="hero is-fullheight is-bold">
-	<div id="projects" class="hero-body container">
+	<div id="about" class="hero-body container">
 		<div class="columns is-vcentered">
 			<div class="column has-text-centered has-nice-link">
 				<h4 class="title is-4" style="font-weight: 400"></h4>
@@ -90,29 +90,6 @@ layout: default
 	</div>
 </section>
 
-<section class="hero is-fullheight is-gray">
-	<div id="projects" class="hero-body container">
-		<div class="columns is-vcentered">
-			<div class="column has-text-centered has-nice-link">
-				<img id="astronaut-icon" src="astronaut.svg" width="100" height="100"> 
-				<h4 class="title is-4" style="font-weight: 400"></h4>
-			</div>
-			<div id="latest-repos-container" class="column is-half is-offset-1 has-nice-link">
-				<h2 class="title is-2">Latest Code</h2>
-				<template id="latest-repos-template">
-					<div class="column is-half">
-						<h4 class="title is-4">
-							<a class="latest-repos-title" href=""></a>
-							<span class="tag is-small latest-repos-language">¯\_(ツ)_/¯</span>
-						</h4>
-						<p class="latest-repos-description"></p>
-					</div>
-				</template>
-				<div id="latest-repos" class="columns is-multiline"></div>
-			</div>
-		</div>
-	</div>
-</section>
 <section class="section hero is-fullheight is-default is-bold">
 	<div id="apps" class="container">
 		<h2 class="title is-2">Projects</h2>
